--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "alembic>=1.15.1",
     "asyncpg>=0.30.0",
     "fastapi[standard]>=0.115.11",
+    "pydantic-settings>=2.8.1",
+    "sqlmodel>=0.0.24",
 ]
