--- a/ex3/compose.yml
+++ b/ex3/compose.yml
@@ -15,5 +15,11 @@ services:
       timeout: 5s
       retries: 10
 
+  redis:
+    image: redis
+    command: redis-server --requirepass Redis2019!
+    ports:
+      - "6379:6379"
+
 volumes:
   pgdata:
