--- a/ex3/compose.yml
+++ b/ex3/compose.yml
@@ -21,5 +21,12 @@ services:
     ports:
       - "6379:6379"
 
+  mailhog:
+      image: mailhog/mailhog
+      container_name: 'mailhog'
+      ports:
+        - "1025:1025"
+        - "8025:8025"
+
 volumes:
   pgdata:
