--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,14 @@ dependencies = [
     "alembic>=1.15.1",
     "asyncpg>=0.30.0",
     "bcrypt>=4.3.0",
+    "fastapi-mail>=1.4.2",
     "fastapi[standard]>=0.115.11",
+    "itsdangerous>=2.2.0",
     "passlib>=1.7.4",
     "pydantic-settings>=2.8.1",
     "pyjwt>=2.10.1",
     "redis>=4.2.0rc1",
+    "ruff>=0.11.6",
     "sqlmodel>=0.0.24",
 ]
 
