--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,14 +6,18 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "alembic>=1.15.1",
+    "asgiref>=3.8.1",
     "asyncpg>=0.30.0",
     "bcrypt>=4.3.0",
+    "celery>=5.5.2",
     "fastapi-mail>=1.4.2",
     "fastapi[standard]>=0.115.11",
+    "flower>=2.0.1",
     "itsdangerous>=2.2.0",
     "passlib>=1.7.4",
     "pydantic-settings>=2.8.1",
     "pyjwt>=2.10.1",
+    "pytest>=8.3.5",
     "redis>=4.2.0rc1",
     "ruff>=0.11.6",
     "sqlmodel>=0.0.24",
